--- a/index.html
+++ b/index.html
@@ -10,19 +10,62 @@
 	</head>
 	<body>
 
-		<!-- Replace this URL with your channel to connect the API! -->
-		<a href="https://www.are.na/michael-fehrenbach/typography-and-interaction-too" id="channel-url">
-			<h1 id="channel-title"></h1> <!-- The channel title will be inserted inside this h1. -->
-		</a>
-		<div id="channel-description"></div> <!-- Same here for the channel description. -->
+
+		<header>  			
+			<!-- Replace this URL with your channel to connect the API! -->
+			<a href="https://www.are.na/ziyao-sun/sustainable-material" id="channel-url" style="pointer-events:none">
+				<a href="https://www.are.na/ziyao-sun/sustainable-material" id="channel-url"><h1 id="channel-title"></h1></a> <!-- The channel title will be inserted inside this h1. -->
+			</a>
+			<div id="channel-description"></div> <!-- Same here for the channel description. -->
+		</header>
 
 
 
+		<div class="bg_image">
+		  <div class="fixed blank"></div>
+		  <div class="fixed blank"></div>
+	      <div class="fixed one"></div>
+	      <div class="fixed two"></div>
+	      <div class="fixed three"></div>
+	      <div class="fixed seven"></div>
+	      <div class="fixed eight"></div>
+	      <div class="fixed nine"></div>
+	      <div class="fixed ten"></div>
+	    </div>
+
+
+
+
+	    <img id="menu_icon" src="assets/menu-1.svg" onclick="w3_open()">
+
+
+	    <div id="mySidebar" class="SidebarBlock">
+	      <img id="close_icon" src="assets/close.svg" onclick="w3_close()">
+		  <a href="index.html">Home</a>
+		  <a href="#">Image</a>
+		  <a href="#">Video</a>
+		  <a href="#">Audio</a>
+		  <a href="#">Text</a>
+		</div>
+
+	    
+
+
+		<div class="two-column">
+				<section class="image-blocks audio-embed-blocks text-blocks audio-file-blocks"></section>
+				<section class="link-blocks video-embed-blocks video-file-blocks"></section>			
+		</div>
+
+
+		
 		<!-- All the channel “blocks” will be created as children, here. -->
 		<!-- You could move the classes to different section elements to separate the types! -->
-		<section class="audio-embed-blocks audio-file-blocks image-blocks embed-blocks link-blocks pdf-blocks text-blocks video-embed-blocks video-file-blocks">
-			<h2>Blocks</h2>
+		<section id="credits" class="audio-embed-blocks audio-file-blocks image-blocks embed-blocks link-blocks pdf-blocks text-blocks video-embed-blocks video-file-blocks">
+		    	<p>Curator: Ziyao Sun</p>
+		    	<p>Designer: Lena Chen</p>
+		</div>
 		</section>
+
 
 
 
@@ -125,6 +168,9 @@
 				<p class="type"></p>
 			</figure>
 		</template>
+
+
+
 
 
 
