--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 	      <div class="fixed eight"></div>
 	      <div class="fixed nine"></div>
 	      <div class="fixed ten"></div>
+	      <div class="fixed eleven"></div>
+	      <div class="fixed twelve"></div>
+	      <div class="fixed thirteen"></div>
+
 	    </div>
 
 
@@ -41,11 +45,11 @@
 
 	    <div id="mySidebar" class="SidebarBlock">
 	      <img id="close_icon" src="assets/close.svg" onclick="w3_close()">
-		  <a href="index.html">Home</a>
-		  <a href="#">Image</a>
-		  <a href="#">Video</a>
-		  <a href="#">Audio</a>
-		  <a href="#">Text</a>
+		  <a href="index.html">All</a>
+		  <a href="architecture.html">Architecture</a>
+		  <a href="fashion.html">Fashion</a>
+		  <a href="lifestyle.html">Lifestyle</a>
+		  <a href="about.html">About</a>
 		</div>
 
 	    
