--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="assets/reset.css" rel="stylesheet">
-		<link href="assets/style.css" rel="stylesheet">
+		<link href="assets/style-2.css" rel="stylesheet">
 		<script src="assets/arena.js"></script>
 		<link href="assets/favicon.png" rel="icon">
 	</head>
@@ -13,7 +13,7 @@
 
 		<header>  			
 			<!-- Replace this URL with your channel to connect the API! -->
-			<a href="https://www.are.na/lena-chen/about-mkbq3zizw3s" style="pointer-events:none">
+			<a href="https://www.are.na/lena-chen/about-mkbq3zizw3s" id="channel-url" style="pointer-events:none">
 				<a href="https://www.are.na/lena-chen/about-mkbq3zizw3s"><h1 id="channel-title"></h1></a> <!-- The channel title will be inserted inside this h1. -->
 			</a>
 			<div id="channel-description"></div> <!-- Same here for the channel description. -->
@@ -26,15 +26,6 @@
 		  <div class="fixed blank"></div>
 	      <div class="fixed one"></div>
 	      <div class="fixed two"></div>
-	      <div class="fixed three"></div>
-	      <div class="fixed seven"></div>
-	      <div class="fixed eight"></div>
-	      <div class="fixed nine"></div>
-	      <div class="fixed ten"></div>
-	      <div class="fixed eleven"></div>
-	      <div class="fixed twelve"></div>
-	      <div class="fixed thirteen"></div>
-
 	    </div>
 
 
