--- a/index-grids.html
+++ b/index-grids.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="assets/reset.css" rel="stylesheet">
-		<link href="assets/style-2.css" rel="stylesheet">
+		<link href="assets/style-grids.css" rel="stylesheet">
 		<script src="assets/arena.js"></script>
 		<link href="assets/favicon.png" rel="icon">
 	</head>
@@ -13,8 +13,8 @@
 
 		<header>  			
 			<!-- Replace this URL with your channel to connect the API! -->
-			<a href="https://www.are.na/lena-chen/lifestyle-dett-4yt6h8" id="channel-url" style="pointer-events:none">
-				<a href="https://www.are.na/lena-chen/lifestyle-dett-4yt6h8"><h1 id="channel-title"></h1></a> <!-- The channel title will be inserted inside this h1. -->
+			<a href="https://www.are.na/ziyao-sun/sustainable-material" id="channel-url" style="pointer-events:none">
+				<a href="https://www.are.na/ziyao-sun/sustainable-material" id="channel-url"><h1 id="channel-title"></h1></a> <!-- The channel title will be inserted inside this h1. -->
 			</a>
 			<div id="channel-description"></div> <!-- Same here for the channel description. -->
 		</header>
@@ -30,8 +30,7 @@
 	      <div class="fixed seven"></div>
 	      <div class="fixed eight"></div>
 	      <div class="fixed nine"></div>
-	      <div class="fixed eleven"></div>
-
+	      <div class="fixed ten"></div>
 	    </div>
 
 
@@ -42,19 +41,19 @@
 
 	    <div id="mySidebar" class="SidebarBlock">
 	      <img id="close_icon" src="assets/close.svg" onclick="w3_close()">
-		  <a href="index.html">All</a>
-		  <a href="architecture.html">Architecture</a>
-		  <a href="fashion.html">Fashion</a>
-		  <a href="lifestyle.html">Lifestyle</a>
-		  <a href="about.html">About</a>
+		  <a href="index.html">Home</a>
+		  <a href="#">Image</a>
+		  <a href="#">Video</a>
+		  <a href="#">Audio</a>
+		  <a href="#">Text</a>
 		</div>
 
 	    
 
 
 		<div class="two-column">
-				<section class="image-blocks text-blocks"></section>
-				<section class="link-blocks video-embed-blocks video-file-blocks audio-embed-blocks audio-file-blocks"></section>			
+				<section class="image-blocks audio-embed-blocks text-blocks audio-file-blocks"></section>	
+				<section class="link-blocks video-embed-blocks video-file-blocks"></section>	
 		</div>
 
 
@@ -78,42 +77,42 @@
  		<!-- Spotify, Soundcloud, etc. -->
 		<template id="audio-embed-block">
 			<figure class="audio-embed"> <!-- You can use the container classes to style a whole type. -->
-				<h3 class="title"></h3>
-				<img class="image"> <!-- Image/cover image source inserts here. --> <!-- Block title inserts here. -->
-				<figcaption class="description"></figcaption> <!-- Block type/kind inserts here. -->
+				<img class="image"> <!-- Image/cover image source inserts here. -->
+				<h3 class="title"></h3> <!-- Block title inserts here. -->
+				<p class="type"></p> <!-- Block type/kind inserts here. -->
 			</figure>
 		</template>
 
  		<!-- Uploaded audio files. -->
 		<template id="audio-file-block">
 			<figure class="audio-file-block">
-				<h3 class="title"></h3>
-				<img class="image">		
-				<figcaption class="description"></figcaption>
+				<img class="image">
+				<h3 class="title"></h3>		
+				<p class="type"></p>
 			</figure>
 		</template>
 
 		<template id="image-block">
 			<figure class="image-block">
-				<h3 class="title"></h3>
-				<img class="image">	
-				<figcaption class="description"></figcaption>
+				<img class="image">
+				<h3 class="title"></h3>	
+				<p class="type"></p>
 			</figure>
 		</template>
 
 		<template id="link-block">
 			<figure class="link-block">
-				<h3 class="title"></h3>
 				<img class="image">
-				<figcaption class="description"></figcaption>
+				<h3 class="title"></h3>
+				<p class="type"></p>
 			</figure>
 		</template>
 
 		<template id="pdf-block">
 			<figure class="pdf-block">
-				<h3 class="title"></h3>
 				<img class="image">
-				<figcaption class="description"></figcaption>
+				<h3 class="title"></h3>
+				<p class="type"></p>
 			</figure>
 		</template>
 
@@ -121,25 +120,25 @@
 			<figure class="text-block">
 				<div class="content"></div> <!-- Text blocks insert their HTML here. -->
 				<div></div>
-				<figcaption class="description"></figcaption>
+				<p class="type"></p>
 			</figure>
 		</template>
 
 		<!-- YouTube, Vimeo, etc. -->
 		<template id="video-embed-block">
 			<figure class="video-embed-block">
-				<h3 class="title"></h3>
 				<img class="image">
-				<figcaption class="description"></figcaption>
+				<h3 class="title"></h3>
+				<p class="type"></p>
 			</figure>
 		</template>
 
 		<!-- Uploaded video files. -->
 		<template id="video-file-block">
 			<figure class="video-file-block">
-				<h3 class="title"></h3>
 				<img class="image">
-				<figcaption class="description"></figcaption>
+				<h3 class="title"></h3>
+				<p class="type"></p>
 			</figure>
 		</template>
 
