--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<title>Lena Chen</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="assets/reset.css" rel="stylesheet">
@@ -22,17 +23,17 @@
 	    <div id="mySidebar">
 		    <a href="index.html">Homepage</a>
 		    <div id="menu_works">
-			    <li><a href="boba.html">Project Name</a></li>
-			    <li><a href="artsy.html">Project Name</a></li>
-			    <li><a href="honeycomb.html">Project Name</a></li>
-			    <li><a href="tutor-orial.html">Project Name</a></li>
-			    <li><a href="dancen">Project Name</a></li>
-			    <li><a href="best-roommate.html">Project Name</a></li>
-			    <li><a href="ambient-light.html">Project Name</a></li>
-			    <li><a href="one-bank">Project Name</a></li>
-			    <li><a href="travel-app.html">Project Name</a></li>			    
+			    <li><a href="boba.html">Boba</a></li>
+			    <li><a href="artsy.html">Artsy</a></li>
+			    <li><a href="ambient-light.html">Ambient Lighting</a></li>
+			    <li><a href="tutor-orial.html">Tutor Orial</a></li>
+			    <li><a href="#">HoneyComb</a></li>
+			    <li><a href="#">Dancen</a></li>
+			    <li><a href="#">Best Roommate</a></li>
+			    <li><a href="#">One Bank</a></li>
+			    <li><a href="#">Travel</a></li>			    
 		    </div>
-		    <a href="about.html">About</a>
+		    <a href="info.html">Info</a>
 		</div>
 	
 
@@ -47,34 +48,75 @@
 
 			<section class="two_column ">
 				<div class="project_div">
-					<h3>Project Type</h1>
-					<h1>Project Name</h1>
-					<p>project description Lorem ipsum dolor sit amet. Ut quaerat voluptas et impedit omnis id pariatur reprehenderit ut earum rerum nam libero nobis et nobis quasi!</p>
+					<h3>App Design</h1>
+					<a href="boba.html"><h1>Boba</h1></a>
+					<a href="boba.html"><p>Boba is designed for K12 students in China, combining school learning and online study scenes into a single app to motivate students and boost learning efficiency. </p></a>
 				</div>
 				<div class="project_div">
-					<h3>Project Type</h1>
-					<h1>Project Name</h1>
-					<p>project description Lorem ipsum dolor sit amet. Ut quaerat voluptas et impedit omnis id pariatur reprehenderit ut earum rerum nam libero nobis et nobis quasi!</p>
+					<h3>App Improvement</h1>
+					<a href="artsy.html"><h1>Artsy</h1></a>
+					<a href="artsy.html"><p>Artsy is the largest online art marketplace with more than 1 million artworks by over one hundred thousand artists. The project aims to build trust between buyers and sellers.</p></a>
 				</div>
 				<div>
-					<img src="images/home/boba.jpg">
+					<a href="boba.html"><img src="images/home/boba.jpg"></a>
 				</div>
 				<div>
-					<img src="images/home/artsy.jpg">
+					<a href="artsy.html"><img src="images/home/artsy.jpg"></a>
 				</div>
 			</section>
-
 
 			<section class="one_column ">
 				<div class="project_div">
-					<h3>Project Type</h1>
-					<h1>Project Name</h1>
-					<p class="text_width_adjust">project description Lorem ipsum dolor sit amet. Ut quaerat voluptas et impedit omnis id pariatur reprehenderit ut earum rerum nam libero nobis et nobis quasi!</p>
+					<h3>App Design</h1>
+					<a href="ambient-light.html"><h1>Ambient Lighting</h1></a>
+					<a href="ambient-light.html"><p class="text_width_adjust">MyLights is an app that works with smart lightings to elevate user experience, creating a cozy and immersive home with both visual and sound.</p></a>
 				</div>
 				<div>
-					<img src="images/home/tutor-orial.jpg">
+					<a href="ambient-light.html"><img src="images/home/ambient-light.jpg"></a>
 				</div>
 			</section>
+
+			<section class="one_column ">
+				<div class="project_div">
+					<h3>Website Re-Design</h1>
+					<a href="tutor-orial.html"><h1>Tutor Orial</h1></a>
+					<a href="tutor-orial.html"><p class="text_width_adjust">This is a school project: redesigning Tutor Orial, an online tutor services website. The new website aims to improve user experience in finding a good tutor and booking a session.</p></a>
+				</div>
+				<div>
+					<a href="tutor-orial.html"><img src="images/home/tutor-orial.jpg"></a>
+				</div>
+			</section>
+
+			<section class="two_column ">
+				<div class="project_div">
+					<h3>App Design</h1>
+					<h1>Dancen</h1>
+					<p>Dancen is an app for dancers to social, chat, and network. Users can discover high quality, diversified social scenes while creating dance. </p>
+				</div>
+				<div class="project_div">
+					<h3>App Improvement</h1>
+					<h1>Best Roommate</h1>
+					<p>Best Roommate is a startup that aims to provide an efficient and secure platform for young people to find matching roommates in cities.</p>
+				</div>
+				<div>
+					<img src="images/home/dancen.jpg">
+				</div>
+				<div>
+					<img src="images/home/best-roommate.jpg">
+				</div>
+			</section>
+
+			<section class="one_column ">
+				<div class="project_div">
+					<h3>Website Design</h1>
+					<h1>HoneyComb</h1>
+					<p class="text_width_adjust">Honeycomb is a platform for renting and buying apartments . It provides personalized services to meet the different needs of Chinese people living in New York.</p>
+				</div>
+				<div>
+					<img src="images/home/honeycomb.jpg">
+				</div>
+			</section>
+
 
 		</main>
 
@@ -91,34 +133,78 @@
 
 			<section class="one_column ">
 				<div class="project_div">
-					<h3>Project Type</h3>
-					<h1>Project Name</h1>
-					<p class="text_width_adjust">project description Lorem ipsum dolor sit amet. Ut quaerat voluptas et impedit omnis id pariatur reprehenderit ut earum rerum nam libero nobis et nobis quasi!</p>
+					<h3>App Design</h1>
+					<a href="boba.html"><h1>Boba</h1></a>
+					<a href="boba.html"><p>Boba is designed for K12 students in China, combining school learning and online study scenes into a single app to motivate students and boost learning efficiency. </p></a>
 				</div>
 				<div>
-					<img src="images/home/boba.jpg">
-				</div>
+					<a href="boba.html"><img src="images/home/boba.jpg"></a>
+				</div>				
 			</section>
 
 			<section class="one_column ">
 				<div class="project_div">
-					<h3>Project Type</h3>
-					<h1>Project Name</h1>
-					<p class="text_width_adjust">project description Lorem ipsum dolor sit amet. Ut quaerat voluptas et impedit omnis id pariatur reprehenderit ut earum rerum nam libero nobis et nobis quasi!</p>
+					<h3>App Improvement</h1>
+					<a href="artsy.html"><h1>Artsy</h1></a>
+					<a href="artsy.html"><p>Artsy is the largest online art marketplace with more than 1 million artworks by over one hundred thousand artists. The project aims to build trust between buyers and sellers.</p></a>
 				</div>				
 				<div>
-					<img src="images/home/artsy.jpg">
+					<a href="artsy.html"><img src="images/home/artsy.jpg"></a>
 				</div>
 			</section>
 
 			<section class="one_column ">
 				<div class="project_div">
-					<h3>Project Type</h3>
-					<h1>Project Name</h1>
-					<p class="text_width_adjust">project description Lorem ipsum dolor sit amet. Ut quaerat voluptas et impedit omnis id pariatur reprehenderit ut earum rerum nam libero nobis et nobis quasi!</p>
+					<h3>App Design</h1>
+					<a href="ambient-light.html"><h1>Ambient Lighting</h1></a>
+					<a href="ambient-light.html"><p class="text_width_adjust">MyLights is an app that works with smart lightings to elevate user experience, creating a cozy and immersive home with both visual and sound.</p></a>
 				</div>
 				<div>
-					<img src="images/home/tutor-orial.jpg">
+					<a href="ambient-light.html"><img src="images/home/ambient-light.jpg"></a>
+				</div>
+			</section>
+
+			<section class="one_column ">
+				<div class="project_div">
+					<h3>Website Re-Design</h1>
+					<a href="tutor-orial.html"><h1>Tutor Orial</h1></a>
+					<a href="tutor-orial.html"><p class="text_width_adjust">This is a school project: redesigning Tutor Orial, an online tutor services website. The new website aims to improve user experience in finding a good tutor and booking a session.</p></a>
+				</div>
+				<div>
+					<a href="tutor-orial.html"><img src="images/home/tutor-orial.jpg"></a>
+				</div>
+			</section>
+
+			<section class="one_column ">
+				<div class="project_div">
+					<h3>App Design</h1>
+					<h1>Dancen</h1>
+					<p>Dancen is an app for dancers to social, chat, and network. Users can discover high quality, diversified social scenes while creating dance. </p>
+				</div>
+				<div>
+					<img src="images/home/dancen.jpg">
+				</div>
+			</section>
+
+			<section class="one_column ">
+				<div class="project_div">
+					<h3>App Improvement</h1>
+					<h1>Best Roommate</h1>
+					<p>Best Roommate is a startup that aims to provide an efficient and secure platform for young people to find matching roommates in cities.</p>
+				</div>
+				<div>
+					<img src="images/home/best-roommate.jpg">
+				</div>
+			</section>
+
+			<section class="one_column ">
+				<div class="project_div">
+					<h3>Website Design</h1>
+					<h1>HoneyComb</h1>
+					<p class="text_width_adjust">Honeycomb is a platform for renting and buying apartments . It provides personalized services to meet the different needs of Chinese people living in New York.</p>
+				</div>
+				<div>
+					<img src="images/home/honeycomb.jpg">
 				</div>
 			</section>
 
