--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
 				</div>
 			</section>
 
+			<section class="one_column ">
+				<div class="project_div">				
+					<h1>More projects coming soon ..</h1>
+				</div>
+			</section>
+
 
 		</main>
 
@@ -205,6 +211,12 @@
 				</div>
 				<div>
 					<img src="images/home/honeycomb.jpg">
+				</div>
+			</section>
+
+			<section class="one_column ">
+				<div class="project_div">				
+					<h1>More projects coming soon ..</h1>
 				</div>
 			</section>
 
